[package]
name = "qtrs"
version = "0.2.5"
edition = "2021"
authors = ["zhanghaoxvan <3592114583@qq.com>"]
license = "MIT OR Apache-2.0"
description = "qtrs - A type-safe, builder-pattern-driven Qt6 GUI library for Rust"
repository = "https://github.com/zhanghaoxvan/qtrs"
readme = "README.md"
keywords = ["qt", "gui", "qt6", "widgets", "cxx"]
categories = ["gui", "api-bindings"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
ui = []    # enable .ui file loading from Qt Designer (requires qt6-tools-dev)

[[example]]
name = "basic"
path = "examples/basic/basic.rs"

[[example]]
name = "ui"
path = "examples/ui/ui.rs"
required-features = ["ui"]

[[example]]
name = "demo"
path = "examples/demo/demo.rs"

